# scheme-netcdf

./: .gitignore  COPYING  Makefile  Makefile.am  README.md  README.org  build-netcdf.scm  cf-standard-name-table.xml  configure.ac  gnuplot.scm  install-netcdf.scm  load-test.py  netcdf.c  netcdf.cdecl  netcdf.scm  run-tests.scm  test-netcdf.scm
gnuplot/: Makefile.am  configure.ac  gnuplot_utils.c  gnuplot_utils.cdecl
testing/: Makefile  gen-version.c  simple_xy_nc4_wr.c  simple_xyz.c
